...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/drawBtn"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="115dp"
        android:layout_height="64dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="10dp"
        android:background="#D77148"
        android:shadowDx="0"
        android:text="Draw"
        android:textColor="#020000"
        app:layout_constraintBottom_toTopOf="@+id/galleryBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempLogo"
        tools:ignore="HardcodedText" />
...
