...
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:background="#FFFFFFFF" />


    <TextView
        android:id="@+id/current_size"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:baselineAligned="false"
        android:fontFamily="casual"
        android:text="Brush Size: 70"
        android:textColor="#630000"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="0dp"
        android:background="#DFC290"
...
            android:contentDescription="load"
            android:paddingTop="5dp"
            android:src="@drawable/load"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/toggle_grid"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#00FFFFFF"
            android:contentDescription="toggle"
            android:paddingTop="10dp"
            android:src="@drawable/gridtoggle"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/change_background"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#00FFFFFF"
            android:contentDescription="change"
            android:paddingStart="0dp"
            android:paddingEnd="15dp"
            android:src="@drawable/canvas_background"
            tools:ignore="HardcodedText" />


...
